--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="d-flex">
   <shared-sidebar></shared-sidebar>
-  <gifs-home-page class="flex-fill m-3"></gifs-home-page>
+  <gifs-home-page class="flex-fill"></gifs-home-page>
 </div>
